--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -556,9 +556,9 @@
 	year = "2021",
 	doi = "10.1038/s42254-021-00345-y",
 	OPTurl = "https://doi.org/10.1038/s42254-021-00345-y",
-	author = {M. M. Noack and P. H. Zwart and D. M. Ushizima and M. Fukuto and K. G. Yager and K. C. Elbert and 
-		C. B. Murray and A. Stein and G. S. Doerk and E. H. R. Tsai and R. Li and G. Freychet and 
-		M. Zhernenkov and H.-Y. N. Holman and S. Lee and L. Chen and E. Rotenberg and T. Weber and 
+	author = {M. M. Noack and P. H. Zwart and D. M. Ushizima and M. Fukuto and K. G. Yager and K. C. Elbert and
+		C. B. Murray and A. Stein and G. S. Doerk and E. H. R. Tsai and R. Li and G. Freychet and
+		M. Zhernenkov and H.-Y. N. Holman and S. Lee and L. Chen and E. Rotenberg and T. Weber and
 		Y. Le Goc and M. B\"ohm and P. Steffens and P. Mutti and J. A. Sethian},
 }
 
@@ -734,7 +734,7 @@
 	Martin2007,
 	author = {Martin, Ken and Hoffman, Bill},
 	title = {{An Open Source Approach to Developing Software in a Small Organization}},
-	journal = {IEEE Software}, 
+	journal = {IEEE Software},
 	issn = {1937-4194},
 	year = {2007},
 	volume = {24},
@@ -764,7 +764,7 @@
 	Icking1995,
 	author = {Christian Icking and Rolf Klein},
 	title = {{Searching for the Kernel of a Polygon -- A Competitive Strategy}},
-	booktitle = {{SCG '95: Proceedings of the eleventh annual symposium on Computational geometry}}, 
+	booktitle = {{SCG '95: Proceedings of the eleventh annual symposium on Computational geometry}},
 	issn = {},
 	year = {1995},
 	month = {September},
@@ -809,11 +809,35 @@
 {
 	Muehlbauer2006,
 	author = {M\"uhlbauer, Quirin and Hradil, Klaudia},
-	title = {{Monitoring and Preventing Collisions for a Triple Axis Spectrometer}}, 
+	title = {{Monitoring and Preventing Collisions for a Triple Axis Spectrometer}},
 	booktitle = {{Proceedings of the 2006 IEEE International Conference on Control Applications, Munich, Germany, October 4-6, 2006}},
 	year = {2006},
 	pages = {1795-1800},
 	doi = {10.1109/CACSD-CCA-ISIC.2006.4776913},
+}
+
+
+@inproceedings
+{
+	Mutti2011,
+	author = {P. Mutti and F. C{\'e}cillon and A. Elaazzouzi and Y. Le Goc and J. Locatelli and H. Ortiz and J. Ratel},
+	title = {{NOMAD -- more than a simple sequencer}},
+	booktitle = {Proceedings of ICALEPCS 2011, Grenoble, France},
+	pages = {808 - 811},
+	year = {2011},
+}
+
+
+@inproceedings
+{
+	Legoc2017,
+	author = {Y. Le Goc and P. Mutti and F. C{\'e}cillon and I. Dag{\`e}s},
+	title = {{Nomad 3D: Augmented Reality in Instrument Control}},
+	booktitle = {Proceedings of ICALEPCS 2017, Barcelona, Spain},
+	pages = {1098 - 1102},
+	isbn = {978-3-95450-193-9},
+	year = {2017},
+	doi = {10.18429/JACoW-ICALEPCS2017-THAPL05},
 }
 
 
