--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -12,7 +12,7 @@ In this chapter we review the theory for conversion between crystal coordinates 
 at the triple-axis instrument. Section \ref{sec:xtalcoords} introduces crystal coordinates and the so-called 
 $UB$ matrix formalism, section \ref{sec:tasangles} calculates the corresponding TAS angles. 
 The formalisms \cite{Lumsden2005} reviewed here are ubiquitous in neutron science, they are not only used 
-in the control programs of triple-axis instruments, among them \textit{NOMAD} \cite{web_NOMAD} 
+in the control programs of triple-axis instruments, among them \textit{NOMAD} \cite{Mutti2011, web_NOMAD} 
 or \textit{NICOS} \cite{web_NICOS}, but are also employed in virtual instrument simulators like \textit{vTAS} \cite{vTAS2013} or 
 \textit{McStas} \cite{McStas2020}, as well as in data analysis software like \textit{Mantid} \cite{Arnold2014}.
 
