--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -17,7 +17,7 @@ scientist at the \textit{Thales} spectrometer \cite{thales}, to Yannick Le Goc (
 control and electronics group), as well as to Dr. Paul Steffens (\textit{Thales} instrument scientist) for our
 regular discussions about various triple-axis automatisation projects, our experiments and the
 instrumental aspects. I furthermore wish to thank Jérôme Locatelli from the ILL's instrument control group for
-all the help with \textit{NOMAD} \cite{web_NOMAD}, the instrument control system at the ILL, and the technical discussions
+all the help with \textit{NOMAD} \cite{Mutti2011, web_NOMAD}, the instrument control system at the ILL, and the technical discussions
 about its internal details. 
 Thanks to Dr. Paolo Mutti, the head of both the scientific computing and the instrument control group 
 at the ILL, for supporting this project and for the great atmosphere and working environment there.
