--- a/tex/outlook.tex
+++ b/tex/outlook.tex
@@ -61,7 +61,7 @@ The first step is an integration into existing instrument control systems.
 With its modular design and the possibility to use it as C++ library without any graphical user interface
 (see chapter \ref{sec:library}), care has already been taken to make this step as smooth as possible.
 In a joint project with Y. Le Goc from the instrument control group at the ILL, a plug-in module for
-the instrument control software \textit{NOMAD} \cite{web_NOMAD} will be developed that links against 
+the instrument control software \textit{NOMAD} \cite{Mutti2011, web_NOMAD} will be developed that links against 
 the pathfinding library of this work.
 The idea is to have a settings tab in \textit{NOMAD} where the user can switch on or off the pathfinding
 functionality. If it is on, subsequent drive commands will not be directly executed and all motors thus
@@ -75,7 +75,7 @@ so far is oblivious to the positions in instrument space a crystal coordinate co
 The software will allow the autonomous control system \cite{web_gpcam} to drive the instrument safely
 and with far less surveillance than is still necessary at the moment.
 
-A second step will include an interface with the independent \textit{NOMAD 3D} \cite{web_NOMAD3d}
+A second step will include an interface with the independent \textit{NOMAD 3D} \cite{Legoc2017, web_NOMAD3d}
 software to replace the collision detection performed on the simplified model with the full \textit{CAD}
 model \cite{ThalesModel2021} of the instrument.
 So far, \textit{NOMAD 3D} tries to calculate collisions between all polygons of the \textit{CAD} model, 
